# DeepLearning

./: .gitignore  DataDistributionExploration_Kevin.ipynb  DataDistributionExploration_Veronika.ipynb  DataExplorationVeronika.ipynb  FinalProject.ipynb  How_TO.ipynb  InformerPerformance.ipynb  InformerPerformance_500.ipynb  InformerVisualization.ipynb  NONAME_27080568.out  README.md  TODO.txt  TPTransformerVisualization.ipynb  ais_to_parguet.py  aleksandra_notebook.ipynb  command.py  data_stuff.ipynb  dataloader.py  encoders.py  informer_expirement.sh  informer_job.sh  informer_min.py  informer_original_paper.py  job.sh  main.py  output_utils.py  plotting.py  pyproject.toml  run_ais.sh  temptp.py  temptpi.py  testing_kevin.ipynb  tpinform.py  tpinform_experiment.py  tpinform_experiment2_0.py  tptrans.py  tptrans_expirement.py  training.py  tranformer_expirement.sh  tranformer_ob.sh  (+2 more)
ablation_studies/: AblationStudiesResults.ipynb  LargeDataSetResults.ipynb  ablation_test.sh  config.py  results_TPInform_b1.csv  results_TPInform_b2.csv  results_TPTrans_b1.csv  results_TPTrans_b2.csv  results_TempTPI_b1.csv  results_TempTPI_b2.csv  results_large_data.csv  results_tpinform_b1.csv  results_tpinform_b2.csv  results_tptrans_b1.csv  results_tptrans_b2.csv  run.py
archive/: DataExplorationVeronika.ipynb  InformerPerformance_OLD.ipynb
command_scripts/: informer_expirement.sh  informer_job.sh  job.sh  run_ais.sh  temptp.sh  temptpi_job.sh  tranformer_job.sh  tranformer_ob.sh  transformer_job.sh
import_performance_log_files/: Performance.ipynb
literature/: InformerVsTransformer.txt
