[tool.poetry]
name = "deeplearning"
version = "0.1.0"
description = "Small Deep Learning utilities and data processing scripts"
authors = ["veronika <veronika@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
# runtime dependencies used in this repo
pandas = "^2.2"
pyarrow = "^12.0"
scikit-learn = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^24.3"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
veronika-test = "veronika_test:main"
