[tool.poetry]
name = "deeplearning"
version = "0.1.0"
description = "Small Deep Learning utilities and data processing scripts"
authors = ["veronika <veronika@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
# was ^12.0
pyarrow = ">=14,<20"
scikit-learn = "^1.3"
ipykernel = "^7.1.0"
cartopy = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^24.3"
flake8 = "^7.0"




