[tool.poetry]
name = "deeplearning"
version = "0.1.0"
description = "Small Deep Learning utilities and data processing scripts"
authors = ["veronika <veronika@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"          # 2.2+ drops 3.9 support
pyarrow = ">=12,<14"       # 14+ likely requires 3.10+
scikit-learn = "^1.3"
ipykernel = "^6.29.0"      # 7.x not released; last 6.x supports 3.9 fine
cartopy = "^0.21.1"        # latest stable with Python 3.9 compatibility
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^24.3"
flake8 = "^7.0"
